--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     }
   ],
   "liveSassCompile.settings.includeItems": ["src/scss/**/*.scss"],
-  "liveSassCompile.settings.excludeList": ["**/node_modules/**", "**/_*.scss"]
+  "liveSassCompile.settings.excludeList": ["**/node_modules/**", "**/_*.scss"],
+  "liveServer.settings.port": 5501
 }
